--- a/jcasc-blueocean/Dockerfile
+++ b/jcasc-blueocean/Dockerfile
@@ -1,12 +1,10 @@
-FROM jenkins/jenkins
+FROM jenkins/jenkins:latest
 
 ENV JAVA_OPTS -Djenkins.install.runSetupWizard=false
-#ENV CASC_JENKINS_CONFIG /var/jenkins_home/casc_configs
+ENV CASC_JENKINS_CONFIG /var/jenkins_home/jenkins.yaml
+ENV DOCKER_OPTS="-H tcp://docker:2376"
 
-# Migrate to Jenkins CLI
 COPY plugins.txt /usr/share/jenkins/ref/plugins.txt
-RUN /usr/local/bin/install-plugins.sh < /usr/share/jenkins/ref/plugins.txt
+RUN jenkins-plugin-cli -f /usr/share/jenkins/ref/plugins.txt
 
 COPY casc.yaml /var/jenkins_home/jenkins.yaml
-
-USER root
