--- a/jenkins/docker-compose.yml
+++ b/jenkins/docker-compose.yml
@@ -12,7 +12,7 @@ volumes:
 
 services:
   dind:
-    container_name: jenkins-docker
+    container_name: jenkins-agents
     image: docker:dind
     privileged: true
     restart: unless-stopped
@@ -37,6 +37,7 @@ services:
     ports:
       - 8080:8080
     volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
       - data:/var/jenkins_home
       - certs:/certs/client:ro
     environment:
